Fixed alignment bugs and added a view comments tab and made it more responsive for smaller devices

--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,64 @@
-h1
-{
+* {
+    box-sizing: border-box;
+    font-family: "Geist", sans-serif;
+}
+h1{
     width: 100%;
-    font-family: sans-serif;
     text-align: center;
     color: #ffffff;
 }
-div#header
-{
-    width: 100vw;
-    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVDMjZaOcktUrxxf4E-pmh9zSmYGCk_iVUCA&s');
-    background-position:center;
-    background-repeat: no-repeat;
+#header{
+    background-color: indigo;
     padding: 5%;
-    border-top-right-radius: 15px;
-    border-top-left-radius: 15px;
+    border-radius: 15px;
     background-size: cover;
 }
-p
-{
-    font-family: helvetica, sans-serif;
- 
-}
-div#form
-{
+#form{
     border-radius: 15px;
     background-color: lightgray;
-    font-family: helvetica;
-    width: 50%;
-    text-align: center;
+    width: 48%;
+    text-align: left;
     font-size: smaller;
+    padding: 10px;
+    float: left;
+    height: auto;
+    margin-right: 2%;    
 }
-label
-{
-    text-align: right;
-}
-form#comment
-{
+form#comment{
     height: 100px;
 }
-span.emoji
-{
+span.emoji{
     font-size: 18px;
 }
-textarea
-{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align:center;
+textarea{
+    width: 100%;
+    height: 100px;
+    max-width: 100%;
+    min-height: 100px;
+}
+div.footer{
+    position: center;
+    background-color: lightblue;
+    border-radius: 15px;
+}
+#viewComment{
+    border-radius: 15px;
+    background-color: gray;
+    padding: 10px;
+    width: 48%;
+    float: left;
+    height: 250px;
+}
+.row::after{
+    content: "";
+    display: table;
+    clear: both;
+}
+@media screen and (max-width: 600px){
+    #form, #viewComment {
+        width: 100%;
+    }
+    #form{
+        margin-bottom: 2%;
+    }
 }
